Web ready to test

--- a/www/sorting.html
+++ b/www/sorting.html
@@ -45,7 +45,7 @@
   <!-- TODO make the divs here dynamically. Only thing to be accurate needs to be the class for the colour, the rest is straightforward -->  
       
     <script type="text/javascript">
-    $(function () {
+    $(document).ready(function () {
 
   // Make ajax request
     // $.ajax({
