--- a/www/bus2.html
+++ b/www/bus2.html
@@ -41,9 +41,17 @@
     <ul id="filters">
       <li><a href="#" data-filter="*">All</a></li>
       <li><a href="#" data-filter=".57640">Kiln Mews</a></li>
-      <li><a href="#" data-filter=".48141">St George's Hospital (A)</a></li>
-      <li><a href="#" data-filter=".50618">St George's Hospital (B)</a></li>
-      <li><a href="#" data-filter=".47087">Cranmer Terrace</a></li>
+      <li><a href="#" data-filter=".49703">St George's Hospital / Knightsbridge (HE)</a></li>
+      <li><a href="#" data-filter=".76699">St George's Hospital / St James (HD)</a></li>
+      <li><a href="#" data-filter=".77067">St George's Hospital / Main Entrance (HV)</a></li>
+      <li><a href="#" data-filter=".57302">St George's Hospital / Lanesborough (HC))</a></li>
+      <li><a href="#" data-filter=".48141">St George's Hospital (HM)</a></li>
+      <li><a href="#" data-filter=".49184">St George's Hospital (HH)</a></li>
+      <li><a href="#" data-filter=".50618">St George's Hospital (HM)</a></li>
+      <li><a href="#" data-filter=".47087">Cranmer Terrace (HK)</a></li>
+      <li><a href="#" data-filter=".91517">Cranmer Terrace</a></li>
+      <li><a href="#" data-filter=".47702">St George's / University of London (HA)</a></li>
+      <li><a href="#" data-filter=".73250">St George's / University of London (HB)</a></li>
     </ul>
 
 
