--- a/www/bus2.html
+++ b/www/bus2.html
@@ -126,7 +126,7 @@ var $container = $('#container');
                       classforcolour = 'element alkaline-earth metal ';
                     }
                     if (due > 20 ){
-                      classforcolour = 'element noble-gas nonmetal ';
+                      classforcolour = 'element alkali';
                     }
                     classforcolour = classforcolour + this.stopid;
                   var mydiv = $('<div>', {'id':div_id, class:classforcolour, 'data-symbol':this.busname, 'data-category':"actinoid"})
