--- a/www/bus2.html
+++ b/www/bus2.html
@@ -19,11 +19,12 @@
   
   <section id="content">
     
-      <h1>Live Buses @ SGUL</h1>
+      <h1>Live Buses @ SGUL </h1>
+
     
 
       <section id="copy">
-  
+  Please note this page updates its contents automatically every 5-30 seconds. There is no need to refresh.
   </section>
   
   <section id="options" class="clearfix">
